--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intro_slider: ^2.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
