--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.1
+  google_sign_in: ^5.2.4
+  firebase_auth: ^3.3.7
+  firebase_core: ^1.12.0
+ 
  
 
 dev_dependencies:
