--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: ^5.2.4
   firebase_auth: ^3.3.7
   firebase_core: ^1.12.0
+  flutter_native_splash: ^2.0.5
  
  
 
