--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,19 +57,19 @@ dev_dependencies:
 flutter_native_splash:
 
 
-    color: "#42a5f5"
-    #background_image: "assets/background.png"
+#    color: "#42a5f5"
+    background_image: "assets/splashscreen.png"
 
     # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
     # the leading # character.
 
     # The image parameter allows you to specify an image used in the splash screen.  It must be a
     # png file and should be sized for 4x pixel density.
-    #image: assets/splash.png
+#    image: assets/splashscreen.png
 
     # This property allows you to specify an image used as branding in the splash screen. It must be
     # a png file. Currently, it is only supported for Android and iOS.
-    branding: assets/images/iagree.png
+#    branding: assets/images/iagree.png
 
     # Specify your branding image for dark mode.
     #branding_dark: assets/dart_dark.png
