--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   google_sign_in: ^5.2.4
   firebase_auth: ^3.3.7
   firebase_core: ^1.12.0
+  google_maps: ^6.1.0
+  flutter_polyline_points: ^1.0.0
+  google_maps_flutter: ^2.1.2
 
  
  
