--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   google_maps: ^6.1.0
   flutter_polyline_points: ^1.0.0
   google_maps_flutter: ^2.1.2
+  cloud_firestore: ^3.1.8
+  fluttertoast: ^8.0.8
 
  
  
