--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   google_maps_flutter: ^2.1.2
   cloud_firestore: ^3.1.8
   fluttertoast: ^8.0.8
+  fl_chart: ^0.45.1
+  flutter_charts: ^0.5.0
 
  
  
